<resources>
    <string name="app_name">MotivARCHE</string>
    <string name="welcome">Bienvenido</string>
    <string name="put_credentials">Ingresa tus credenciales</string>
    <string name="put_username">Ingresa tu nombre de usuario</string>
    <string name="put_email">Ingresa tu email</string>
    <string name="put_password">Ingresa tu contraseña</string>
    <string name="put_confirm_password">Repite tu contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Regístrate</string>
    <string name="register">Registro</string>
    <string name="do_register">Registrarse</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="comentarios">       Tú opinión cuenta!</string>
    <string name="preguntas">   Escribenos tus dudas aquí.</string>
    <string name="buttonSelectPicture">Seleccionar imagen</string>
    <string name="buttonTakePicture">Tomar fotografía</string>
    <string name="principalMainTitle">Bienvenido a Motiv-ARCHE</string>
    <string name="messageFieldRequired">Este campo es obligatorio</string>
    <string name="google_registry">Botón de registro con google</string>
    <string name="facebook_registry">Botón de registro con facebook</string>
    <string name="heritage_img">Imagen de patrimonio</string>
    <string name="fingerprint_button">Botón de huella digital</string>
    <string name="twitter_registry">Botón de registro con twitter</string>
    <string name="message_text">Ingrese mensaje de texto</string>


    <!-- menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_scanner">Abrir escáner</string>
    <string name="menu_museum">Ver museos</string>
    <string name="menu_profile">Editar perfil</string>
    <string name="menu_tutorial">Ver tutorial</string>
    <string name="chat">Chat con otros usuarios</string>
    <string name="menu_close_session">Cerrar sesión</string>
    <string name="menu_comentarios">Comentarios</string>
    <string name="menu_preguntas">Preguntas</string>
    <string name="menu_picture">Subir imágenes/ Ver imágenes</string>
    <string name="upload_button">Subir imagen</string>
    <string name="view_image_button">Ver imágenes</string>
    <string name="auth_failed">Error de autenticación</string>

    <!-- home -->
    <string name="home_title">Bienvenido</string>
    <!-- tutorial -->
    <string name="tutorial_title">Tutorial</string>

    <!-- profile -->
    <string name="user_name">Nombre</string>
    <string name="user_mail">Correo electrónico</string>
    <string name="actual_user_password">Ingresa tu contraseña actual</string>
    <string name="new_user_password">Ingresa tu nueva contraseña</string>
    <string name="save">Guardar cambios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- error messages -->
    <string name="emailError">El formato del correo electrónico no es valido</string>
    <string name="passwordError">La contraseña y la confirmación no coinciden</string>
    <string name="imageNameHint">Ingrese nombre de la imagen</string>

    <!-- Facebook -->
    <string name="facebook_app_id">418539753218701</string>
    <string name="fb_login_protocol_scheme">fb418539753218701</string>

    <!-- Twitter -->
    <string name="twitter_consumer_key" translatable="false">hC57GI4cviNSdtnsy9AakzwSe</string>
    <string name="twitter_consumer_secret" translatable="false">OOod6oe7Q4UPnbTNeZX2TBUlNHfKMedlneHANwJp8gK8mc4lL6</string>

</resources>