<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_scanner" />

        <item
            android:id="@+id/nav_museum"
            android:icon="@drawable/ic_menu_museum"
            android:title="@string/menu_museum" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_menu_tutorial"
            android:title="@string/menu_tutorial" />

        <item
            android:id="@+id/nav_close_session"
            android:icon="@drawable/ic_menu_close_session"
            android:title="@string/menu_close_session" />




    </group>
</menu>