<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="co.edu.javeriana.motivarche.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_scanner"
        android:name="co.edu.javeriana.motivarche.ui.scanner.ScannerFragment"
        android:label="@string/menu_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="co.edu.javeriana.motivarche.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_museum"
        android:name="co.edu.javeriana.motivarche.ui.museum.MapsFragment"
        android:label="@string/menu_museum"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="co.edu.javeriana.motivarche.ui.tutorial.TutorialFragment"
        android:label="@string/menu_tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/nav_comentarios"
        android:name="co.edu.javeriana.motivarche.comentarios"
        android:label="@string/menu_comentarios"
        tools:layout="@layout/comentarios" />

    <fragment
        android:id="@+id/nav_preguntas"
        android:name="co.edu.javeriana.motivarche.preguntas"
        android:label="@string/menu_preguntas"
        tools:layout="@layout/preguntas" />

</navigation>