<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuProfile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menuComentarios"
        android:title="@string/comentarios"
        android:icon="@drawable/ic_baseline_comment_24"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menuPreguntas"
        android:title="@string/menu_preguntas"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menuLogOut"
        android:title="@string/menu_close_session"
        android:icon="@drawable/ic_baseline_close_24"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        />




</menu>