<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginBottom="657dp"
        android:background="@drawable/purple_rectangle"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="655dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/register"
            android:textAlignment="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="36dp"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_edit"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/put_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_below="@id/textView"/>

        <EditText
            android:id="@+id/txtEmailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_edit"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/put_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/txtNombreUsuario"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmailUsuario"
            android:layout_marginTop="48dp"
            android:background="@drawable/rounded_corner_edit"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/put_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPassword"
            android:background="@drawable/rounded_corner_edit"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/put_confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtPasswordConfirm"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/do_register" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegistro"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textColor="#D14C4EC9" />

        <TextView
            android:id="@+id/lblIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/login"
            android:textAlignment="center"
            android:onClick="irAPantallaPrincipal"
            android:textColor="#D14C4EC9"
            android:layout_below="@id/textView5"/>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>