<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrained_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DED8D8"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/greece"
        android:contentDescription="@string/heritage_img" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner_view"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="-47dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/put_credentials"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundcorner_text"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/put_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundcorner_text"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/put_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/forgot_password"
            android:textColor="#D94C4EC9"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword" />


        <ImageButton
            android:id="@+id/fingerButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:background="@null"
            android:tint="@color/purple_700"
            app:layout_constraintBottom_toTopOf="@+id/txtRegistro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion"
            app:srcCompat="@drawable/ic_baseline_fingerprint_24"
            tools:ignore="UseAppTint"
            android:contentDescription="@string/fingerprint_button" />

        <TextView
            android:id="@+id/txtRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mulish_regular"
            android:minHeight="48dp"
            android:onClick="irAlRegistro"
            android:text="@string/signup"
            android:textColor="#D94C4EC9"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayoutLoginOptions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLoginOptions"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/btnGoogle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnFacebook"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/google"
                android:contentDescription="@string/google_registry" />


            <ImageButton
                android:id="@+id/btnFacebook"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/facebook_registry"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fb"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/btnTwitter"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:scaleType="centerInside"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnFacebook"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/twitter"
                tools:ignore="UseAppTint,ImageContrastCheck"
                android:contentDescription="@string/twitter_registry" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>