<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/principal_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalMenu">

    <TextView
        android:id="@+id/titlePrincipalMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/principalMainTitle"
        android:textAlignment="center"

        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:text="username"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="16dp"
        android:text="email"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/pictureButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="tomarImagen"
            android:text="@string/menu_picture" />

        <Button
            android:id="@+id/scannerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirEscaner"
            android:text="@string/menu_scanner" />

        <Button
            android:id="@+id/museumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirMapa"
            android:text="@string/menu_museum" />

        <Button
            android:id="@+id/tutorialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirTutorial"
            android:text="@string/menu_tutorial" />

        <Button
            android:id="@+id/chatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="abrirChat"
            android:text="@string/chat" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>