<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PictureActivity">


    <ImageView
        android:id="@+id/imageCameraPicture"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="26dp"
        app:srcCompat="@drawable/gallery" />

    <LinearLayout
        android:id="@+id/optionsSelectImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageCameraPicture"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"

        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSelectImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/buttonSelectPicture" />

        <Button
            android:id="@+id/buttonTakePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/buttonTakePicture" />
    </LinearLayout>

    <Button
        android:id="@+id/uploadImageDatabase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/upload_button" />

    <EditText
        android:id="@+id/textImageName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uploadImageDatabase"

        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-190dp"
        android:hint="@string/imageNameHint"
        tools:ignore="UnknownId" />

</RelativeLayout>