<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <RelativeLayout
        android:layout_width="409dp"
        android:layout_height="655dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtNombreUsuario"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_image"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/roundcorner_text"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/user_name"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtEmailUsuario"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNombreUsuario"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundcorner_text"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/user_mail"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtActualPassword"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEmailUsuario"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundcorner_text"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/actual_user_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/txtNewPassword"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtActualPassword"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/roundcorner_text"
            android:ems="10"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/new_user_password"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNewPassword"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/mulish_regular"
            android:text="@string/save" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="117dp"
            app:srcCompat="@drawable/ic_menu_profile" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>